Clusters are now only defined by gold standard variants and complex regions